# Cramly

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
notes/outputs/: study_guide.md
notes/processed/: external_chunks.json  external_sources.json  extracted_text.json
prompts/: quiz_prompt.txt  search_prompt.txt  study_guide_prompt.txt
src/: chunk.py  cite.py  generate_quiz.py  generate_study_guide.py  handwritten_ingest.py  ingest.py  mcp_research.py  utils.py
static/: index.html  quiz.html  quiz.js  study_guide.html  style.css
