[project]
name = "study-buddy-poc"
version = "0.1.0"
description = "AI-powered study tools: quiz generation and study guides from notes"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
]
