[project]
name = "study-buddy-poc"
version = "0.1.0"
description = "AI-powered study tools: quiz generation and study guides from notes"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    # notes ingestion pipeline
    "pymupdf>=1.24.0",       # PDF parsing + scanned-page rendering
    "python-docx>=1.1.0",    # DOCX parsing
    "pytesseract>=0.3.10",   # OCR wrapper (also: brew install tesseract)
    "pillow>=10.0.0",        # image loading for OCR
    "tavily-python>=0.7.0",  # kept as fallback; primary path uses MCP client
    "mcp>=1.0.0",            # MCP client — connects to Tavily MCP server via npx
]
